name:                reflex-dom-lazy-grid
version:             0.1.3.0
synopsis:            Lazy grid for Reflex
description:         Grid with virtual scroll, sorting, filtering, column selection and csv export.
homepage:            http://github.com/mulderr/reflex-dom-lazy-grid
license:             BSD3
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
stability:           Experimental
copyright:           2016 Maciej Kazulak
category:            FRP, Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  exposed-modules:     Reflex.Dom.LazyGrid
                     , Reflex.Dom.LazyGrid.Grid
                     , Reflex.Dom.LazyGrid.Types
  other-modules:       Reflex.Dom.LazyGrid.DomUtils
  build-depends:       base              >= 4.7      && < 5
                     , aeson             >= 0.8
                     , bytestring        >= 0.10
                     , containers        >= 0.5
                     , csv               >= 0.1
                     , data-default      >= 0.5
                     , ghcjs-dom         >= 0.8
                     , lens              >= 4
                     , reflex            >= 0.5
                     , reflex-dom-core   >= 0.4
                     , text              >= 1.2
                     , time              >= 1.5
                     , these
                     , transformers      >= 0.4
                     , unordered-containers >= 0.2.5

source-repository head
  type:     git
  location: https://github.com/mulderr/reflex-dom-lazy-grid
